--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,5 +73,20 @@ services:
       - postgres
     restart: on-failure
 
+  seed:
+    container_name: seed
+    build:
+      context: ./db/seed
+      dockerfile: Dockerfile
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      DB_PORT: ${DB_PORT}
+    depends_on:
+      - migrate
+    networks:
+      - internal
+
 volumes:
   db_data:
