--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -81,12 +81,7 @@ services:
       context: ./db/seed
       dockerfile: Dockerfile
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      DB_PORT: ${DB_PORT}
-    depends_on:
-      - migrate
+      PG_DATABASE_URL: ${PG_DATABASE_URL}
     networks:
       - internal
 
