--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,7 @@
-POSTGRES_PASSWORD=postgrespassword
-PG_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
+PG_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgrespassword
+POSTGRES_DB=postgres
+DB_PORT=5432
+DB_HOST=postgres
