minor fixes in `core` conf

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,9 @@
 HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
+HASURA_GRAPHQL_ENDPOINT=http://localhost:8080/v1/graphql
 PG_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgrespassword
 POSTGRES_DB=postgres
 DB_PORT=5432
 DB_HOST=postgres
+CORE_PORT=4000
