added frontend service

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,6 @@
 HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
 HASURA_GRAPHQL_ENDPOINT=http://localhost:8080/v1/graphql
+HASURA_GRAPHQL_UNAUTHORIZED_ROLE=anonymous
 PG_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgrespassword
@@ -7,3 +8,4 @@ POSTGRES_DB=postgres
 DB_PORT=5432
 DB_HOST=postgres
 CORE_PORT=4000
+FRONTEND_PORT=3000
