--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@apollo/client": "^3.7.15",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
